Bug 35183 - system freezes with 2.6.38-rc kernel and kms pageflip enabled
Summary: system freezes with 2.6.38-rc kernel and kms pageflip enabled
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-10 13:07 UTC by almos
Modified: 2011-03-15 08:55 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
initial minimal patch to fix hangs. (2.29 KB, patch)
2011-03-11 03:14 UTC, Dave Airlie
no flags Details | Splinter Review

Description almos 2011-03-10 13:07:39 UTC
The system freezes completely after a few 3d operations (like changing the desktop in compiz a couple of times). No error message appears in dmesg or syslog. Tried both rc7 and rc8 and the drm-radeon-testing branch. If I disable kms pageflip in xorg.conf, the system seems stable. I also tried setting radeon.agpmode=-1, but didn't help.

Hardware: radeon 9600xt (rv350 agp)
software: latest debian unstable (libdrm2 2.4.23, xserver-xorg 7.6, xserver-xorg-video-radeon 6.14.0)

Considering that most distributions use compositing wm by default, and kms pageflip is also enabled by default, this seems like a serious problem.

Bugs 21472, 34137, 34643 might be related, but I'm not sure.
Comment 1 Dave Airlie 2011-03-11 03:10:42 UTC
I've debugged this and I'm hoping I have a fix, hopefully I can get a cleaned up patch in 5mins - tomorrow. (this is mainly to stop anyone else getting into this)
Comment 2 Dave Airlie 2011-03-11 03:14:56 UTC
Created attachment 44345 [details] [review]
initial minimal patch to fix hangs.
Comment 3 almos 2011-03-12 14:07:12 UTC
2.6.38-rc8 with the patch seems stable so far.
Doesn't it disable pageflip, though? According to phoronix there should be some 3d performance increase with pageflip, but I haven't noticed any.
Comment 4 Dave Airlie 2011-03-12 16:04:54 UTC
 no it just moves things around to avoid hitting those registers at runtime.

The speed increase you'll see is with fullscreen apps running at less than vblank frames. You should see more fps or get closer to vblank.

However currently page flip is limited to vblank synced rendering.
Comment 5 Marek Olšák 2011-03-15 08:55:00 UTC
I think the fix is part of kernel 2.6.38. Closing then.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.